Bug 11 [Tela Comprar] - PROBLEMA: a tabela nao esta centralizada; SOLUCAO: inclui a propriedade margin:auto no seletor TABLE. Fiz tambem algumas alteracoes adicionais: inclui, tambem em TABLE, a propriedade text-align:center para centralizar o texto na tabela e, no seletor BACK-BUTTON, inclui a propriedade margin-left:20vw de modo que o botao de voltar acompanhasse a tabela em vez de isolar-se dela.

--- a/semana1/bugfixes/exercicio-aula6/index.css
+++ b/semana1/bugfixes/exercicio-aula6/index.css
@@ -117,6 +117,8 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align:center;
+    margin:auto;
 }
 
 td button {
@@ -142,6 +144,7 @@ td button {
     font-size: 15px;
     color: black;
     padding:5px;
+   margin-left:20vw;
 }
 
 #back-button:hover {
